; ModuleID = '/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_MtDec.c_MtDecThread_CreateAndStart.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_MtDec.c_MtDecThread_CreateAndStart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@SZ_OK = common dso_local global i32 0, align 4
@ThreadFunc = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*)* @MtDecThread_CreateAndStart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MtDecThread_CreateAndStart(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %6 = call i64 @MtDecThread_CreateEvents(%struct.TYPE_5__* %5)
  store i64 %6, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %27

9:                                                ; preds = %1
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %12 = call i64 @Thread_WasCreated(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %9
  %15 = load i32, i32* @SZ_OK, align 4
  store i32 %15, i32* %2, align 4
  br label %30

16:                                               ; preds = %9
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i32, i32* @ThreadFunc, align 4
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = call i64 @Thread_Create(i32* %18, i32 %19, %struct.TYPE_5__* %20)
  store i64 %21, i64* %4, align 8
  %22 = load i64, i64* %4, align 8
  %23 = icmp eq i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %16
  %25 = load i32, i32* @SZ_OK, align 4
  store i32 %25, i32* %2, align 4
  br label %30

26:                                               ; preds = %16
  br label %27

27:                                               ; preds = %26, %1
  %28 = load i64, i64* %4, align 8
  %29 = call i32 @MY_SRes_HRESULT_FROM_WRes(i64 %28)
  store i32 %29, i32* %2, align 4
  br label %30

30:                                               ; preds = %27, %24, %14
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @MtDecThread_CreateEvents(%struct.TYPE_5__*) #1

declare dso_local i64 @Thread_WasCreated(i32*) #1

declare dso_local i64 @Thread_Create(i32*, i32, %struct.TYPE_5__*) #1

declare dso_local i32 @MY_SRes_HRESULT_FROM_WRes(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
